@@ -136,9 +136,9 @@ a.csv_download:hover		{background-color:rgba(163,0,13,1); color:rgba(255,255,255
 	
 /*	For url #view=donors & all #view=donor_*
 	============================================= */
-.donors_peak				{border-right:30px solid rgba(186,12,47,1);}
+.donors_peak				{border-right:30px solid rgba(149,162,0,1);}
 .donors_peak.view			{border-right:30px solid rgba(186,12,47,1);}
-.donors_head_title			{background-color:rgba(186,12,47,1); color:rgba(255,255,255,1);}
+.donors_head_title			{background-color:rgba(149,162,0,1); color:rgba(255,255,255,1);}
 .donors_head_title.view		{background-color:rgba(186,12,47,1);}
 
 
@@ -151,8 +151,8 @@ a.csv_download:hover		{background-color:rgba(163,0,13,1); color:rgba(255,255,255
 
 /*	For url #view=sectors & all #view=sector_*
 	============================================= */
-.sectors_peak				{border-right:30px solid rgba(206,131,0,1);}
-.sectors_head_title			{background-color:rgba(206,131,0,1); color:rgba(255,255,255,1);}
+.sectors_peak				{border-right:30px solid rgba(124,54,141,1);}
+.sectors_head_title			{background-color:rgba(124,54,141,1); color:rgba(255,255,255,1);}
 
 
 /*	For url #view=search
