@@ -78,8 +78,8 @@ a.view_all_money:hover	{background-color:rgba(15,15,15,0.9); color:rgba(255,255,
 .map_info				{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
 .map_no_info			{color:rgba(255,255,255,1);}
 .map_percent			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.9);}
-a.map_percent			{color:rgba(206,131,0,1);}
-a.map_percent:hover		{color:rgba(255,163,0,1);}
+a.map_percent			{color:rgba(255,255,255,1); background-color:rgba(0,0,0,0.7);}
+a.map_percent:hover		{background-color:rgba(0,0,0,0.9);}
 .map_percent span		{color:rgba(255,255,255,1);}
 
 
@@ -186,20 +186,20 @@ table.country.min td.name	{color:rgba(255,255,255,1);}
 
 /*	Table Titles
 	============================================= */
-table.title				{border-bottom:2px solid rgba(165,99,0,1);}
 table.title td			{color:rgba(255,255,255,1);}
 table.title td.sort		{color:rgba(204,204,204,1);}
 
 
 /*	Table for Active / Ended projects
 	============================================= */
+table.list tr:hover		{background-color:rgba(255,255,255,0);}
 table.list td			{color:rgba(198,198,198,1); border-bottom:1px solid rgba(56,56,56,1);}
 table.list td span		{color:rgba(153,153,153,1);}
 table.list a			{color:rgba(218,218,218,1);}
 table.list a:focus		{color:rgba(255,255,255,1);}
 table.list a:link  		{color:rgba(218,218,218,1);}
 table.list a:visited	{color:rgba(218,218,218,1);}
-table.list a:hover		{color:rgba(255,174,34,1); background-color:rgba(0,0,0,0.4);}
+table.list a:hover		{color:rgba(255,174,34,1); background-color:rgba(0,0,0,0);}
 table.list a:active		{color:rgba(218,218,218,1);}
 
 
@@ -216,12 +216,13 @@ table.money td.col7			{background-color:rgba(74,74,74,0.6);}
 table.money tr.row1 th		{color:rgba(255,255,255,1);}
 table.money tr.row1 th span	{color:rgba(255,255,255,1);}
 table.money tr.row1 th.col1	{background-color:rgba(70,70,70,0.9); border:1px solid rgba(68,68,68,1); border-bottom:1px solid rgba(141,141,141,1);}
-table.money tr.row1 th.col2	{border-bottom:1px solid rgba(141,141,141,1); border-top:1px solid rgba(67,67,67,1);}
+table.money tr.row1 th.col2	{background-color:rgba(56,56,56,0.9); border-bottom:1px solid rgba(141,141,141,1); border-top:1px solid rgba(67,67,67,1);}
 table.money tr.row1 th.col3	{background-color:rgba(56,56,56,0.9); border:1px solid rgba(67,67,67,1); border-bottom:1px solid rgba(141,141,141,1);}
 table.money tr.row1 th.col4	{background-color:rgba(74,74,74,0.9); border:1px solid rgba(82,82,82,1); border-bottom:1px solid rgba(141,141,141,1);}
 
 table.money tr.row2 td		{color:rgba(255,255,255,1);}
 table.money tr.row2 td.col1 {background-color:rgba(70,70,70,0.9); border-left:1px solid rgba(68,68,68,1); border-right:1px solid rgba(68,68,68, 1);}
+table.money tr.row2 td.col2	{background-color:rgba(56,56,56,0.9);}
 table.money tr.row2 td.col3	{background-color:rgba(56,56,56,0.6); border-left:1px solid rgba(67,67,67,1);}
 table.money tr.row2 td.col4	{background-color:rgba(56,56,56,0.8);}
 table.money tr.row2 td.col5	{background-color:rgba(56,56,56,0.9); border-right:1px solid rgba(67,67,67,1);}
@@ -234,9 +235,8 @@ table.money tr.rows td.col5	{border-right:1px solid rgba(67,67,67,1);}
 table.money tr.rows td.col7	{border-right:1px solid rgba(82,82,82,1);}
 
 table.money tr.rows td.col2:hover, table.money tr.rows td.col3:hover, 
-table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover	{background-color:rgba(206,131,0,0.6);}
-table.money tr.rows td.col6:hover	{background-color:rgba(206,131,0,0.6);}
-table.money tr.rows td.col7:hover	{color:rgba(198,198,198,1);}
+table.money tr.rows td.col4:hover, table.money tr.rows td.col5:hover,
+table.money tr.rows td.col6:hover, table.money tr.rows td.col7:hover	{background-color:rgba(206,131,0,0.6);}
 
 table.money a				{color:rgba(204,204,204,1);}
 table.money a:focus			{color:rgba(204,204,204,1);}
@@ -428,7 +428,8 @@ value span			{color:rgba(204,204,204,1);}
 /*	Contact info for Publisher
 	============================================= */
 contact-info *						{color:rgba(255,255,255,1);}
-contact-info:nth-of-type(1):before	{color:rgba(204,204,204,1);}
+contact-info						{background-color:rgba(206,131,0,1)}
+contact-info:nth-of-type(1):before	{color:rgba(255,255,255,1);}
 span.span_contact-info				{background-color:rgba(15,15,15,0.7);}
 
 
