@@ -1,6 +1,7 @@
 Development Portal (2016-12-02 shi)
 ==============================
 Update fixes for inspire template
+Update fixes for mustard template
 
 
 Development Portal (2016-12-01 shi)
